[package]
name = "rspm"
version = "0.1.0"
edition = "2024"

[dependencies]
sysinfo = "0.36.1"
chrono = "0.4.41"
clap = { version = "4.5.42", features = ["derive"] }
nix = { version = "0.30.1", features = ["signal"] }
ratatui = { version = "0.29.0", features = ["all-widgets"] }
crossterm = "0.29.0"
color-eyre = "0.6.5"
